<resources>
    <!--    <string name="app_name">Library Management System</string>-->
    <!--    <string name="default_web_client_id">569681346766-j8cs6jngcs9kis5tuj2rln0mf384n4k2.apps.googleusercontent.com</string>-->

    <string name="facebook_app_id">1133601105320249</string>
    <string name="fb_login_protocol_scheme">fb1133601105320249</string>
    <string name="facebook_client_token">3b9098897b7b86792bf108bc55337b78</string>

    <string name="app_name">Bookly</string>
    <string name="action_settings">Settings</string>

    <string name="previous">Previous</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="please_enter_your_email_address_you_will_receive_a_link_to_create_a_new_password_via_email">Please,enter your email address.You will receive a link to create a new password via email.</string>
    <string name="oops_your_password_is_not_correct">oops! Your Password is Not Correct</string>
    <string name="name_is_require">Name is Require</string>
    <string name="phone_number_is_require">Phone number is required</string>
    <string name="passwords_do_not_match">Password don not match</string>
    <string name="prompt_email">your@email.com</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sing_in">Sign In</string>
    <string name="don_t_have_any_account">Don\'t have any account</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="login_with_google">Continue with Google</string>
    <string name="login_with_facebook">Continue With Facebook</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_gateway_to_endless_reading">Your gateway to endless reading</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="bookly">| Bookly</string>
    <string name="search_books_author">Search Books, Author...</string>
    <string name="myshelf">MyShelf</string>
    <string name="username">UserName</string>
    <string name="discovery_your_next">Discovery Your Next </string>
    <string name="favorite_book"> Favorite Book</string>
    <string name="explore_thousands_of_books_available_for_rent_nno_commitments_just_great_reads">Explore thousands of books available for rent.\nNo commitments, just great reads.</string>
    <string name="browse_collection">Browse Collection</string>
    <string name="back_to_login">Back to Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="ok">Okay</string>
    <string name="retry">Retry</string>
    <string name="generic_error_msg">Error, Please try again later.</string>
    <string name="google_sign_in_failed_msg">Google sign in failed, please retry again later</string>
    <string name="view_all">View All</string>
    <string name="trending_now">Trending Now</string>
    <string name="browse_by_category">Browse by Category</string>
    <string name="rent_for_4_99">Rent for $4.99</string>
    <string name="browse_our_entire_collection_of_trending_books">Browse our entire collection of trending books</string>
    <string name="similar_books_you_might_like">Similar Books You Might Like</string>
    <string name="profile">Profile</string>
    <string name="payments">Payments</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="account_actions">Account Actions</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="re_enter_new_password">Re-Enter New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="account_information">Account Information</string>
    <string name="manage_your_reading_journey">Manage your reading journey</string>
    <string name="reading">Reading</string>
    <string name="rent_now">Rent Now</string>
    <string name="all_books">All Books</string>
    <string name="currently_reading">Currently Reading</string>
    <string name="rented">Rented</string>
    <string name="finished">Finished</string>
    <string name="pay_now">Pay Now</string>
    <string name="amount_to_pay_12_97">Amount to Pay: $12.97</string>
    <string name="payment_method_credit_card">Payment Method: Credit Card</string>
    <string name="pending_payments_2">Pending Payments: 2</string>
    <string name="outstanding_balance_12_97">Outstanding Balance: $12.97</string>
    <string name="invoice_summary">Invoice Summary</string>
    <string name="credit_debit_card_nvisa_4242">Credit/Debit Card\nVISA **** 4242</string>
    <string name="book">Book</string>
    <string name="amount">Amount</string>
    <string name="date_rented">Date Rented</string>
    <string name="status">Status</string>
    <string name="bookname">BookName</string>
    <string name="oct_15_2023">Oct 15, 2023</string>
    <string name="_4_99">$4.99</string>
    <string name="pending">Pending</string>
    <string name="rental_history">Rental History</string>
</resources>