<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ivory_white"
        android:padding="16dp"
        tools:context=".ui.register.RegisterFragment">

        <!-- Header -->
        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_logo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/logo_comp_app" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookly"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:paddingStart="8dp" />
        </LinearLayout>

        <!-- Full Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTilRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:helperText="*"
            app:helperTextTextColor="@color/red"
            app:layout_constraintTop_toBottomOf="@id/headerLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_nameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/design_input"
                android:drawableStart="@drawable/person_24dp"
                android:hint="@string/full_name"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTilRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:helperText="*"
            app:helperTextTextColor="@color/red"
            app:layout_constraintTop_toBottomOf="@id/nameTilRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_emailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/design_input"
                android:drawableStart="@drawable/email_24dp_e3e3e3"
                android:hint="@string/email"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Phone -->
        <LinearLayout
            android:id="@+id/phoneLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/emailTilRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:ccp_showFlag="true"
                app:ccp_defaultNameCode="EG" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_phoneRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/design_input"
                android:drawableStart="@drawable/baseline_phone_24"
                android:hint="@string/phone_number"
                android:padding="16dp" />
        </LinearLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTilRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:helperText="*"
            app:helperTextTextColor="@color/red"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/phoneLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_passwordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Password"
                android:drawableStart="@drawable/lock_24dp_e3e3e3"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/design_input"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordTilRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:helperText="*"
            app:helperTextTextColor="@color/red"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/passwordTilRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_confirmPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Password"
                android:drawableStart="@drawable/lock_24dp_e3e3e3"
                android:hint="@string/confirmpassword"
                android:inputType="textPassword"
                android:background="@drawable/design_input"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Register Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textColor="@drawable/status_text_color"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordTilRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>



